# lkprf

./: .gitignore  CHANGES.rst  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: README.md
docs/tutorials/: lkprf_TPF_example.ipynb
src/lkprf/: __init__.py  data.py  keplerprf.py  prfmodel.py  tessprf.py  utils.py  version.py
tests/: test_prf.py
