[tool.poetry]
name = "lkprf"
version = "1.0.3"
description = ""
authors = ["TESS Science Support Center <tesshelp@bigbang.gsfc.nasa.gov>, Christina Hedges <christina.l.hedges@nasa.gov>"]
license = "MIT"
readme = "docs/README.md"
packages = [{include = "lkprf", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
scipy = ">=1.8.0"
fitsio = "^1.2.4"
requests = "^2.32.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.3"
matplotlib = ">=3.5"
black = "^24.4.2"
pytest = "^8.2.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

